--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,9 @@ layout: default
 <article class="page">
 
   <h1>{{ page.title }}</h1>
-
+  <div class="date">
+    {{ page.date | date: "%B %e, %Y" }}
+  </div>
   <div class="entry">
     {{ content }}
   </div>
