--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ post.title }}</h1>
+  <h1>{{ page.title }}</h1>
   <div class="date">
-    {{ post.date | date: "%B %e, %Y" }}
+    {{ page.date | date: "%B %e, %Y" }}
   </div>
   
   <div class="entry">
