--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,22 @@ layout: default
 ---
 
 <article class="post">
+  
   <h1>{{ page.title }}</h1>
+  
   <div class="date">
     {{ page.date | date: "%B %e, %Y" }}
   </div>
+  
+  {% if post.tags.size > 0 %}
+    Tag{% if post.tags.size > 1 %}s{% endif %}:
+    {{ post.tags | sort | join: ", " }}
+  {% endif %}
   
   <div class="entry">
     {{ content }}
   </div>
 
   {% include disqus.html %}
+
 </article>
