--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: default
     {{ page.date | date: "%B %e, %Y" }}
   </div>
   
-  {% if post.tags.size > 0 %}
-    Tag{% if post.tags.size > 1 %}s{% endif %}:
-    {{ post.tags | sort | join: ", " }}
+  {% if page.tags.size > 0 %}
+    Tag{% if page.tags.size > 1 %}s{% endif %}:
+    {{ page.tags | sort | join: ", " }}
   {% endif %}
   
   <div class="entry">
