--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
+<article class="post">
 
-<article class="page">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title | escape }}</h1>
+  </header>
 
-  <h1>{{ page.title }}</h1>
-  <div class="date">
-    {{ page.date | date: "%B %e, %Y" }}
-  </div>
-  <div class="entry">
+  <div class="post-content">
     {{ content }}
   </div>
+
 </article>
