--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,24 +1,37 @@
 ---
 layout: default
 ---
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-<article class="post">
-  
-  <h1>{{ page.title }}</h1>
-  
-  <div class="date">
-    {{ page.date | date: "%B %e, %Y" }}
-    <br/>
-  {% if page.tags.size > 0 %}
-    Tag{% if page.tags.size > 1 %}s{% endif %}:
-    {{ page.tags | sort | join: ", " }}
-  {% endif %}
-  </div>
-    
-  <div class="entry">
+  <header class="post-header">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <p class="post-meta">
+      <p>{% for tag in page.tags %}<a href="{{ site.baseurl }}/archive/index.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
+      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        {{ page.date | date: date_format }}
+      </time>
+      {% if page.author %}
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      {% endif %}</p>
+  </header>
+
+  <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
 
-  {% include disqus.html %}
+    <section class="post-links">
+  {% if page.previous.url %}
+    <p class="prevLink"><i>Previous: </i><a class="previous" href="{{ site.baseurl }}{{page.previous.url}}">{{page.previous.title}}</a></p>
+  {% endif %}
+  {% if page.next.url %}
+    <p class="nextLink"><i>Next: </i><a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}}</a></p>
+  {% endif %}
+	</section>
 
+  {% if site.disqus.shortname %}
+    {% include disqus_comments.html %}
+  {% endif %}
+
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
