--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 {% for post in site.categories[page.category] %}
-    <p><a href="{{ post.url | absolute_url }}">
+    <a href="{{ post.url | absolute_url }}">
       {{ post.title }}
-  </a></p>
+  </a><br>
 {% endfor %}
